# fizzbuzz

./: LICENSE  README.md  pyproject.toml
fizzbuzz/: list_printer.py  main.py  number_marker.py
tests/: test_fizzbuzz.py  test_list_printer.py  test_number_marker.py
